<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="342dp"
            android:layout_height="275dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/register" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/Welcome_Text"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.399" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                android:gravity="center"
                android:hint="Phone no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/txt_phone_progress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="19dp"
                android:visibility="gone" />


        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_otp_layout"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                android:gravity="center"
                android:hint="Otp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/auto_detect_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/auto_fetch_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/auto_detect"
                    android:textColor="@color/black" />

                <ProgressBar
                    android:id="@+id/fetch_otp_progress"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="start" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/otp_timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="end|center_vertical"
                    android:text="Resend Otp in :  23:00"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/resend_otp"
            android:padding="5dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:background="@drawable/click_effect"
            android:textColor="@color/color_blue"
            app:layout_constraintBottom_toTopOf="@+id/btn_get_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.215" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_2_shape"
            android:text="Get Otp"
            android:textColor="@color/white"
            android:visibility="gone"
            app:backgroundTint="@color/color_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_get_otp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Already_User_Text"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sign_in_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:elevation="20dp"
                android:focusable="true"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Sign_In_Here"
                android:textColor="@color/color_blue" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

